--- a/s2m8uf108_regbaoui/css/mesas.css
+++ b/s2m8uf108_regbaoui/css/mesas.css
@@ -13,7 +13,7 @@ width: 500px;
 border-radius: 0.625rem;
 background-image: linear-gradient(to right, #93B5B3, #C8DAD3);
 margin: 5rem;
-margin-bottom: 8rem;
+margin-bottom: 7rem;
 margin-top: 0;
 font-size: 1.5rem;
 color:  white;
@@ -26,7 +26,7 @@ width: 8rem;
 height: 8rem;
 top: 97px;
 float: right;
-margin-bottom: 7.519rem;
+margin-bottom: 6.52remrem;
 margin-right: 5rem;
 border-radius: 50%;
 border: solid 0.5rem white;
@@ -40,7 +40,6 @@ text-decoration:none;
 .atras p{
 color: white;
 font-family: 'Kanit', sans-serif;
-font-size: 5rem;
 margin: auto;
 }
 
