--- a/s2m8uf108_regbaoui/css/mesas.css
+++ b/s2m8uf108_regbaoui/css/mesas.css
@@ -26,7 +26,7 @@ width: 8rem;
 height: 8rem;
 top: 97px;
 float: right;
-margin-bottom: 6.52remrem;
+margin-bottom: 6.52rem;
 margin-right: 5rem;
 border-radius: 50%;
 border: solid 0.5rem white;
