--- a/M07/estils.css
+++ b/M07/estils.css
@@ -70,25 +70,25 @@ a {
 }
 
 #a06 {
-  background-image: url("img/a06.png");
+  background-image: url("img/a06.PNG");
 	background-repeat:no-repeat;
 	background-size: cover;
 }
 
 #a07 {
-  background-image: url("img/a07.png");
+  background-image: url("img/a07.PNG");
 	background-repeat:no-repeat;
 	background-size: cover;
 }
 
 #a08 {
-  background-image: url("img/a08.png");
+  background-image: url("img/a08.PNG");
 	background-repeat:no-repeat;
 	background-size: cover;
 }
 
 #a09 {
-  background-image: url("img/a09.png");
+  background-image: url("img/a09.PNG");
 	background-repeat:no-repeat;
 	background-size: cover;
 }
