--- a/M07/estils.css
+++ b/M07/estils.css
@@ -40,31 +40,31 @@ a {
 
 
 #a01 {
-	background-image: url("img/a01.png");
+	background-image: url("img/a01.PNG");
 	background-repeat:no-repeat;
 	background-size: cover;
 }
 
 #a02 {
-	background-image: url("img/a02.png");
+	background-image: url("img/a02.PNG");
 	background-repeat:no-repeat;
 	background-size: cover;
 }
 
 #a03 {
-	background-image: url("img/a03.png");
+	background-image: url("img/a03.PNG");
 	background-repeat:no-repeat;
 	background-size: cover;
 }
 
 #a04 {
-	background-image: url("img/a04.png");
+	background-image: url("img/a04.PNG");
 	background-repeat:no-repeat;
 	background-size: cover;
 }
 
 #a05 {
-	background-image: url("img/a05.png");
+	background-image: url("img/a05.PNG");
 	background-repeat:no-repeat;
 	background-size: cover;
 }
