--- a/M07/estils.css
+++ b/M07/estils.css
@@ -40,55 +40,55 @@ a {
 
 
 #a01 {
-	background-image: url("img/a01.PNG");
+	background-image: url("img/a01.png");
 	background-repeat:no-repeat;
 	background-size: cover;
 }
 
 #a02 {
-	background-image: url("img/a02.PNG");
+	background-image: url("img/a02.png");
 	background-repeat:no-repeat;
 	background-size: cover;
 }
 
 #a03 {
-	background-image: url("img/a03.PNG");
+	background-image: url("img/a03.png");
 	background-repeat:no-repeat;
 	background-size: cover;
 }
 
 #a04 {
-	background-image: url("img/a04.PNG");
+	background-image: url("img/a04.png");
 	background-repeat:no-repeat;
 	background-size: cover;
 }
 
 #a05 {
-	background-image: url("img/a05.PNG");
+	background-image: url("img/a05.png");
 	background-repeat:no-repeat;
 	background-size: cover;
 }
 
 #a06 {
-  background-image: url("img/a06.PNG");
+  background-image: url("img/a06.png");
 	background-repeat:no-repeat;
 	background-size: cover;
 }
 
 #a07 {
-  background-image: url("img/a07.PNG");
+  background-image: url("img/a07.png");
 	background-repeat:no-repeat;
 	background-size: cover;
 }
 
 #a08 {
-  background-image: url("img/a08.PNG");
+  background-image: url("img/a08.png");
 	background-repeat:no-repeat;
 	background-size: cover;
 }
 
 #a09 {
-  background-image: url("img/a09.PNG");
+  background-image: url("img/a09.png");
 	background-repeat:no-repeat;
 	background-size: cover;
 }
