--- a/M08.css
+++ b/M08.css
@@ -40,59 +40,59 @@ a {
 
 
 #a01 {
-background-image: url("img8/a01.png");
+background-image: url("img8/a01.PNG");
 }
 
 #a02 {
-background-image: url("img8/a02.png");
+background-image: url("img8/a02.PNG");
 }
 
 #a03 {
-background-image: url("img8/a03.png");
+background-image: url("img8/a03.PNG");
 }
 
 #a04 {
-background-image: url("img8/a04.png");
+background-image: url("img8/a04.PNG");
 }
 
 #a05 {
-background-image: url("img8/a05.png");
+background-image: url("img8/a05.PNG");
 }
 
 #a06 {
-  background-image: url("img8/a06.png");
+  background-image: url("img8/a06.PNG");
 }
 
 #a07 {
-  background-image: url("img8/a07.png");
+  background-image: url("img8/a07.PNG");
 }
 #a08 {
-  background-image: url("img8/a08.png");
+  background-image: url("img8/a08.PNG");
 }
 #a09 {
-  background-image: url("img8/a09.png");
+  background-image: url("img8/a09.PNG");
 }
 #a10 {
-  background-image: url("img8/a10.png");
+  background-image: url("img8/a10.PNG");
 }
 #a11 {
-  background-image: url("img8/a11.png");
+  background-image: url("img8/a11.PNG");
 }
 #a12 {
-  background-image: url("img8/a12.png");
+  background-image: url("img8/a12.PNG");
 }
 
 #a13 {
-  background-image: url("img8/a13.png");
+  background-image: url("img8/a13.PNG");
 }
 
 #a14 {
-  background-image: url("img8/a14.png");
+  background-image: url("img8/a14.PNG");
 	background-repeat:no-repeat;
 	background-size: cover;
 }
 #a15 {
-  background-image: url("img8/a15.png");
+  background-image: url("img8/a15.PNG");
 	background-repeat:no-repeat;
 	background-size: cover;
 }
